web/styles.css
.container{
    background-color: #021313a0;
    padding: 2%;
    width: 42%;
    max-width: 1000px;
    min-width: 700px;
    margin: 0 auto;
}

.chesscontainer{
    width: 80%;
    max-width: 1000px;
    margin: 0 auto;
    overflow: hidden
}

.chesspiece {
    float: left;
    width: 12.5%;
}

.text {
    color: var(--foreground);
}
p {
    color: var(--foreground);
}
a {
    color: var(--color13)
}
table {
    width: 100%;
}
th, td {
    padding: 5px;
    letter-spacing: 1px;
}
table, th, td {
    background-color: #021313;
    color: var(--foreground);
    border-collapse: collapse;
    border: 2px solid var(--foreground);
}

body {
    background-image: var(--wallpaper);
    background-color: var(--background);
    background-blend-mode: color-dodge;
    background-attachment: fixed;
    background-size: cover;
    font-family: "Open Sans";
    margin: 0 auto;
}

h1 {
    color: var(--color15);
    text-align: center;
}
h2 {
    color: var(--color14);
    text-align: center;
}
h3 {
    color: var(--color13);
    font-size: 0.70em;
}
h4 {
    color: var(--color12);
}


/* CSS variables
   Generated by 'wal' 
   `clear; wal -nte --iterative -i Media/Wallpapers/; cat .cache/wal/colors.css` */
:root {
    --wallpaper: url("/home/nik/Media/Wallpapers/0058.jpg");

    /* Special */
    --background: #021313;
    --foreground: #becbb3;
    --cursor: #becbb3;

    /* Colors */
    --color0: #021313;
    --color1: #2D6354;
    --color2: #4E7151;
    --color3: #418568;
    --color4: #619369;
    --color5: #AC9F42;
    --color6: #90A96C;
    --color7: #becbb3;
    --color8: #858e7d;
    --color9: #2D6354;
    --color10: #4E7151;
    --color11: #418568;
    --color12: #619369;
    --color13: #AC9F42;
    --color14: #90A96C;
    --color15: #becbb3;
}

